fixed holds notice spacing for MUWM-3583

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -922,9 +922,7 @@ body {
                                     padding: 0;
                                     color:#a94442;
                                     a {color:#913f16; text-decoration: none;}
-                                    ul { margin-top:5px;
-                                             li { margin-bottom: 1em; }
-                                    }
+                                    li { margin-bottom: 1em; }
                             }
                         }
                     }
